syntax = "proto3";

package task.port;

option java_multiple_files = true;
option java_package = "task.port";
option java_outer_classname = "TaskServiceProto";

service TaskService {
  rpc GetTask (TaskRequest) returns (TaskResponse);
}

message TaskRequest {
  string id = 1;
}

message TaskResponse {
  repeated Task tasks = 1;
  Page page = 2;
}

message Task {
  string id = 1;
  string title = 2;
  string description = 3;
  TaskStatus status = 4;
}

enum TaskStatus {
  OPEN = 0;
  IN_PROGRESS = 1;
  DONE = 2;
}

message Page {
  int32 total = 1;
  int32 current = 2;
  int32 size = 3;
}
